--- a/app/src/main/res/layout/activity_knowledge.xml
+++ b/app/src/main/res/layout/activity_knowledge.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         style="@style/CatName_text"
         android:text="КОСМОС"
+        android:layout_toRightOf="@id/home"
         android:layout_marginTop="30dp"
         android:layout_height="wrap_content"/>
 
