--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<style name="knowledge_cell_text">
-    <item name="android:textColor">@color/white</item>
-    <item name="android:textSize">17sp</item>
-    <item name="android:gravity">center</item>
-    <item name="android:layout_gravity">center</item>
-</style>
+
+    <style name="Theme.TransparencyDemo" parent="@android:style/Theme.Black.NoTitleBar">
+
+    </style>
+
+    <style name="knowledge_cell_text">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
 
     <style name="CatName_text">
-    <item name="android:textSize">30sp</item>
-    <item name="android:textColor">@color/white</item>
-    <item name="android:layout_centerHorizontal">true</item>
-    <item name="android:layout_alignParentTop">true</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_alignParentTop">true</item>
     </style>
 
     <style name="Correct_text">
