--- a/app/src/main/res/layout/activity_knowledge.xml
+++ b/app/src/main/res/layout/activity_knowledge.xml
@@ -27,6 +27,7 @@
         android:text="КОСМОС"
         android:layout_toRightOf="@id/home"
         android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp"
         android:layout_height="wrap_content"/>
 
 <android.support.v7.widget.RecyclerView
