--- a/app/src/main/res/values-xhdpi/dimens.xml
+++ b/app/src/main/res/values-xhdpi/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="left_offset2">18dip</dimen>
     <dimen name="top_offset">1dip</dimen>
     <dimen name="progress_bar_max_height">15dip</dimen>
+    <dimen name="category_item_answered_question_margin_top">0dp</dimen>
 </resources>
