--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="quiz_points_margin">35dp</dimen>
-    <dimen name="quiz_points_top_margin">80dp</dimen>
+    <dimen name="quiz_points_top_margin">100dp</dimen>
     <dimen name="quiz_option_buttons_margin_bottom">70dp</dimen>
     <dimen name="quiz_option_buttons_height">60dp</dimen>
     <dimen name="quiz_option_buttons_width">140dp</dimen>
@@ -17,4 +17,10 @@
     <dimen name="knowledge_item_width">51dp</dimen>
     <dimen name="knowledge_item_margin">8dp</dimen>
     <dimen name="knowledge_overlap">-5dp</dimen>
+    <dimen name="category_item_padding_side">8dip</dimen>
+    <dimen name="category_item_img_width">80dp</dimen>
+    <dimen name="category_item_img_height">70dp</dimen>
+    <dimen name="category_item_img_margin">10dp</dimen>
+    <dimen name="category_item_text_width">175dp</dimen>
+    <dimen name="category_item_answered_question_margin_top">0dp</dimen>
 </resources>
