add payable cats

--- a/app/src/main/res/layout/quiz_categories_layout.xml
+++ b/app/src/main/res/layout/quiz_categories_layout.xml
@@ -16,28 +16,67 @@
         <RelativeLayout
             android:id="@+id/top_bar"
             android:layout_width="match_parent"
-            android:layout_height="60dp">
+            android:layout_height="@dimen/category_item_height">
 
 
             <ImageView
                 android:id="@+id/home"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="30dp"
                 android:layout_width="40dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/icon_home"
+                android:layout_height="40dp"/>
+
+            <ImageView
+                android:id="@+id/back"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_width="40dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/back_icon"
+                android:visibility="gone"
                 android:layout_height="40dp"/>
 
             <TextView
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:layout_alignBottom="@id/home"
-                android:text="ВЫБЕРИТЕ КАТЕГОРИЮ"
+                android:text="@string/cats_choose_title"
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:layout_height="40dp"/>
+
+            <ImageView
+                android:id="@+id/passed"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_width="40dp"
+                android:layout_alignParentRight="true"
+                android:scaleType="centerInside"
+                android:src="@drawable/icon_passed_cats"
+                android:layout_height="40dp"/>
+
+            <ImageView
+                android:id="@+id/restore"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_width="40dp"
+                android:visibility="invisible"
+                android:layout_alignParentRight="true"
+                android:scaleType="centerInside"
+                android:src="@drawable/icon_passed_cats"
+                android:layout_height="40dp"/>
         </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/purchasable_cats"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/category_item_height"
+            android:src="@drawable/buy_cat"
+            android:scaleType="centerCrop"
+            />
 
         <ListView
             android:id="@android:id/list"
