--- a/app/src/main/res/layout/quiz_category_item.xml
+++ b/app/src/main/res/layout/quiz_category_item.xml
@@ -63,6 +63,18 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="69,90 руб."
+                android:layout_alignParentTop="true"
+                android:textColor="@color/white"
+                android:visibility="gone"
+                android:textSize="25sp"/>
+
+            <TextView
                 android:id="@+id/record_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
