add hover buttons.

--- a/app/src/main/res/layout/quiz_category_item.xml
+++ b/app/src/main/res/layout/quiz_category_item.xml
@@ -3,7 +3,7 @@
     android:id="@+id/category_item_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="@dimen/category_item_height"
+    android:layout_height="@dimen/category_item_plus_progress"
     android:focusable="false"
     android:focusableInTouchMode="false"
     android:orientation="horizontal"
@@ -111,4 +111,15 @@
 
         </RelativeLayout>
     </RelativeLayout>
+
+
+    <ProgressBar
+        android:progressDrawable="@drawable/category_progress"
+        android:id="@+id/category_progress_bar"
+        android:layout_marginTop="@dimen/category_item_height"
+        android:max="100"
+        android:indeterminate="false"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"/>
 </FrameLayout>
