--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -16,7 +16,7 @@
         android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/btn_game"
+        android:background="@drawable/btn_newgame_selector"
         android:gravity="center"
         android:text=""
         android:textColor="@android:color/white"
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_gravity="center"
-        android:background="@drawable/btn_rating"
+        android:background="@drawable/btn_rating_selector"
         android:layout_below="@id/play_quiz"
         android:layout_marginBottom="20dp"
         android:gravity="center"/>
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_gravity="center"
-        android:background="@drawable/btn_wiki"
+        android:background="@drawable/btn_wiki_selector"
         android:layout_below="@id/world_score"
         android:layout_marginBottom="20dp"
         android:gravity="center"/>
