--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="quiz_option_buttons_width">140dp</dimen>
     <dimen name="quiz_points_width">120dp</dimen>
     <dimen name="category_item_height">100dp</dimen>
+    <dimen name="category_item_plus_progress">104dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
