resotre button, settings screen

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -46,8 +46,8 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
         android:id="@+id/settings"
-        android:visibility="gone"
-        android:layout_width="40dp"
+        android:visibility="visible"
+        android:layout_width="35dp"
         android:background="@drawable/settings_icon"
         android:scaleType="centerCrop"
         android:layout_height="40dp"/>
@@ -56,7 +56,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="40dp"
         android:id="@+id/about"
-        android:layout_width="40dp"
+        android:layout_width="35dp"
         android:layout_alignParentRight="true"
         android:background="@drawable/info_icon"
         android:scaleType="centerCrop"
