--- a/app/src/main/res/layout/quiz_categories_layout.xml
+++ b/app/src/main/res/layout/quiz_categories_layout.xml
@@ -66,7 +66,7 @@
                 android:visibility="invisible"
                 android:layout_alignParentRight="true"
                 android:scaleType="centerInside"
-                android:src="@drawable/icon_passed_cats"
+                android:src="@drawable/icon_restore"
                 android:layout_height="40dp"/>
         </RelativeLayout>
 
@@ -103,7 +103,7 @@
                 android:gravity="center"
                 android:lineSpacingExtra="3dip"
                 android:padding="10dip"
-                android:text="@string/no_categories"
+                android:text=""
                 android:textColor="#FFFFFF"
                 android:textSize="16sp"/>
         </LinearLayout>
