--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="correct_green">#34d614</color>
     <color name="wrong_red">#d61424</color>
     <color name="placeholder">#e38a98c4</color>
+    <color name="gold">#e09323</color>
     <color name="knowledge_transparent_bg">#af11244f</color>
 </resources>
