--- a/app/src/main/res/layout/activity_knowledge.xml
+++ b/app/src/main/res/layout/activity_knowledge.xml
@@ -46,12 +46,12 @@
         android:layout_height="fill_parent">
 
         <ImageView android:id="@+id/home_fragment"
-                   android:layout_marginLeft="30dp"
+                   android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
-                   android:src="@drawable/back_icon"
-                   android:layout_alignParentLeft="true" />
+                   android:src="@drawable/close_icon"
+                   android:layout_alignParentRight="true" />
 
         <!--app:pstsTabBackground="@drawable/psts_item"-->
 
