--- a/app/src/main/res/layout/knowledge_tab.xml
+++ b/app/src/main/res/layout/knowledge_tab.xml
@@ -7,7 +7,7 @@
         android:id="@+id/hexagon"
         android:visibility="gone"
         android:layout_width="60dp"
-        android:src="@drawable/knowledge_one"
+        android:src="@drawable/hexagon_gold"
         android:scaleType="centerInside"
         android:layout_height="60dp"/>
     <TextView
@@ -17,7 +17,20 @@
         android:text="01"
         android:textSize="20sp"
         android:gravity="center"
+        android:visibility="invisible"
         android:singleLine="true"
         android:textColor="@color/correct_green"
         android:layout_height="match_parent"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:id="@+id/tab_title"
+        android:layout_gravity="center"
+        android:text="01"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:singleLine="true"
+        android:textColor="@color/white"
+        android:layout_height="match_parent"/>
+
 </FrameLayout>
