--- a/app/src/main/res/layout/quiz_activity1.xml
+++ b/app/src/main/res/layout/quiz_activity1.xml
@@ -204,8 +204,20 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="100dp"
             android:gravity="center"
-            android:text="ПРАВИЛЬНО!"
+            android:text="@string/correct_text"
             android:textColor="@color/correct_green"
+            android:textSize="30sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/wrong_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="@string/wrong_text"
+            android:textColor="@color/wrong_red"
             android:textSize="30sp"
             android:textStyle="bold"/>
 
